[Zucchini] Implement patch writing and reading.
EnsemblePatchSink and EnsemblePatchSource (and related items) are utility
classes to read and write patches by interfacing with buffers of raw data.

Bug:
Change-Id: I1cf6f804e01e960177f25c6c79ea8570a27b5531

--- a/chrome/installer/zucchini/BUILD.gn
+++ b/chrome/installer/zucchini/BUILD.gn
@@ -12,9 +12,16 @@ static_library("zucchini_lib") {
     "buffer_source.cc",
     "buffer_source.h",
     "buffer_view.h",
+    "crc32.cc",
+    "crc32.h",
     "disassembler.cc",
     "disassembler.h",
     "image_utils.h",
+    "patch_sink.cc",
+    "patch_sink.h",
+    "patch_source.cc",
+    "patch_source.h",
+    "patch_utils.h",
     "typed_value.h",
   ]
 
@@ -47,6 +54,8 @@ test("zucchini_unittests") {
     "buffer_sink_unittest.cc",
     "buffer_source_unittest.cc",
     "buffer_view_unittest.cc",
+    "crc32_unittest.cc",
+    "patch_sink_source_unittest.cc",
     "typed_value_unittest.cc",
   ]
 
