Fix part of a binary-size regression
Intermingling of test code with production code plus use of source_set
instead of static_library caused significant extra code to be pulled in
to chrome_watcher.dll. This fixes some of the size regression.

//media/mojo/services:lib must be a static_library rather than a
source_set in order to avoid forcibly linking test_mojo_media_client.cc
into non-test binaries, which then pulls in ffmpeg.

CreateMediaServiceForTesting() must be in a separate translation unit
since otherwise calls to CreateMediaService() or CreateGpuMediaService()
will pull in this test code. Yes, linker optimizations may discard the
unneeded code but it is preferable to avoid pulling in this code (and
its dependencies) rather than pulling it in and then discarding it.

Similarly, //media/filters needs to be a static_library to avoid
forcibly pulling in ffmpeg_glue.cc which then pulls in most of ffmpeg.

More detailed explanations can be found starting at:
https://bugs.chromium.org/p/chromium/issues/detail?id=717103#c25

This CL fixes about 100 KB of the regression - much is left to be done.
However this change is necessary to enable future changes - it just
takes one stray ffmpeg reference to pull it all in.

BUG=717103

Change-Id: Ib86883632d1cfd7fdb187b1c407aa2d90c0bd295

--- a/media/mojo/services/BUILD.gn
+++ b/media/mojo/services/BUILD.gn
@@ -20,7 +20,7 @@ component("services") {
 # TODO(xhwang): Add this intermediate target because ServiceTest doesn't support
 # services that depend on shared libraries in component build.
 # See http://crbug.com/670094
-source_set("lib") {
+static_library("lib") {
   sources = [
     "gpu_mojo_media_client.cc",
     "gpu_mojo_media_client.h",
@@ -35,6 +35,7 @@ source_set("lib") {
     "media_service.h",
     "media_service_factory.cc",
     "media_service_factory.h",
+    "media_service_factory_test.cc",
     "mojo_audio_decoder_service.cc",
     "mojo_audio_decoder_service.h",
     "mojo_audio_output_stream.cc",
