--- a/media/filters/BUILD.gn
+++ b/media/filters/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//media/media_options.gni")
 
-source_set("filters") {
+static_library("filters") {
   visibility = [ "//media/*" ]
 
   sources = [
