--- a/services/resource_coordinator/public/interfaces/BUILD.gn
+++ b/services/resource_coordinator/public/interfaces/BUILD.gn
@@ -15,6 +15,7 @@ mojom("interfaces_internal") {
     "memory_instrumentation/memory_instrumentation.mojom",
     "service_callbacks.mojom",
     "service_constants.mojom",
+    "tab_signal_generator.mojom",
     "tracing/tracing.mojom",
     "tracing/tracing_constants.mojom",
   ]
