New mojo service for exposing FirstPaint per RenderFrameHost
This service hooks directly in Blink's PaintTiming class which computes
the first paint, and uses the same timestamp as exposed to the
web platform.

A followup will plumb the data to WebContentsObservers, and formally
deprecate WebContentsObserver::DidFirstVisuallyNonEmptyPaint.

Bug: TODO
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2;master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I67618fcdbca9670ff37d5f03f113a0f0dd65b62c

--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -103,6 +103,7 @@
           "blink::mojom::SensitiveInputVisibilityService",
           "blink::mojom::WebBluetoothService",
           "blink::mojom::WebSocket",
+	  "blink::mojom::FrameBroker",
           // TODO(beng): figure out how to overlay test interfaces like this.
           "content::mojom::BrowserTarget",
           "content::mojom::RendererAudioOutputStreamFactory",
