--- a/mojo/common/BUILD.gn
+++ b/mojo/common/BUILD.gn
@@ -12,7 +12,7 @@ group("common") {
   ]
 }
 
-mojom("common_custom_types") {
+mojom_component("common_custom_types") {
   sources = [
     "file.mojom",
     "file_path.mojom",
@@ -25,6 +25,9 @@ mojom("common_custom_types") {
     "values.mojom",
     "version.mojom",
   ]
+
+  output_prefix = "mojo_common_mojom"
+  macro_prefix = "MOJO_COMMON_MOJOM"
 
   # TODO(crbug.com/699569): Convert to use the new JS bindings.
   js_bindings_mode = "both"
