--- a/mojo/public/tools/bindings/blink_bindings_configuration.gni
+++ b/mojo/public/tools/bindings/blink_bindings_configuration.gni
@@ -7,6 +7,7 @@ variant = "blink"
 for_blink = true
 
 _typemap_imports = [
+  "//mojo/common/values_typemap.gni",
   "//mojo/public/cpp/bindings/tests/blink_typemaps.gni",
   "//third_party/WebKit/Source/platform/mojo/blink_typemaps.gni",
   "//third_party/WebKit/public/blink_typemaps.gni",
