--- a/chrome/installer/linux/BUILD.gn
+++ b/chrome/installer/linux/BUILD.gn
@@ -190,6 +190,14 @@ group("installer_deps") {
   if (!is_chromeos) {
     public_deps += [ ":rpm_packaging_files" ]
   }
+
+  # TODO(thomasanderson): Move this variable into a .gni file
+  # somewhere.  It is currently copied from
+  # buildtools/third_party/libc++/BUILD.gn.
+  libcpp_is_static = !is_component_build && !using_sanitizer
+  if (!libcpp_is_static && use_custom_libcxx) {
+    public_deps += [ "//buildtools/third_party/libc++:libc++" ]
+  }
 }
 
 # Creates .deb and .rpm (RPM for non-ChromeOS only) installer packages.
