--- a/extensions/shell/installer/linux/BUILD.gn
+++ b/extensions/shell/installer/linux/BUILD.gn
@@ -128,6 +128,14 @@ group("installer_deps") {
       "//ppapi/native_client:irt",
     ]
   }
+
+  # TODO(thomasanderson): Move this variable into a .gni file
+  # somewhere.  It is currently copied from
+  # buildtools/third_party/libc++/BUILD.gn.
+  libcpp_is_static = !is_component_build && !using_sanitizer
+  if (!libcpp_is_static && use_custom_libcxx) {
+    public_deps += [ "//buildtools/third_party/libc++:libc++" ]
+  }
 }
 
 # Creates .deb installer package.
