--- a/components/offline_pages/core/prefetch/BUILD.gn
+++ b/components/offline_pages/core/prefetch/BUILD.gn
@@ -159,6 +159,7 @@ source_set("unit_tests") {
     ":prefetch",
     ":test_support",
     "//base",
+    "//components/download/internal/test",
     "//components/download/public",
     "//components/gcm_driver/instance_id",
     "//components/offline_pages/core",
