Add win10_gce_x64_rel to tryserver.chromium.win
Bug: 738255

--- a/buildbucket.config
+++ b/buildbucket.config
@@ -161,6 +161,7 @@
 [bucket "master.tryserver.chromium.win"]
 	builder = win10_chromium_x64_rel_ng
 	builder = win10_chromium_x64_rel_ng_exp
+	builder = win10_gce_x64_rel
 	builder = win8_chromium_gn_upload
 	builder = win_archive
 	builder = win_chrome_official
