Send OAuth token with Feedback report
Add the authentication header to the feedback report upload request
to help validate the identity of the user. Make sure only one report
is sent at a time.

BUG=724676

Change-Id: I3adccc07d93e34ed94b2cb2ae9dd835dcdfac2d7

--- a/components/feedback/BUILD.gn
+++ b/components/feedback/BUILD.gn
@@ -34,11 +34,13 @@ static_library("feedback") {
 
   deps = [
     "//base",
+    "//google_apis:google_apis",
     "//components/data_use_measurement/core",
     "//components/feedback/proto",
     "//components/keyed_service/content",
     "//components/keyed_service/core",
     "//components/variations/net",
+    "//components/signin/core/browser:browser",
     "//content/public/browser",
     "//content/public/common",
     "//net",
