Move url_keyed_metrics capability from browser to an embedded service.
Change-Id: Ie8320cbd12c54af90e35ba21b8f30eb4e3ef4a0b

--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -68,7 +68,6 @@
           "ash",
           "display",
           "memory_instrumentation",
-          "url_keyed_metrics",
           "geolocation_config"
         ],
         "content_gpu": [ "browser" ],
@@ -84,6 +83,7 @@
         ],
         "file": [ "file:filesystem", "file:leveldb" ],
         "media": [ "media:media" ],
+        "metrics": [ "url_keyed_metrics" ],
         "network": [
           "network_service",
           "test",
