--- a/components/feedback/BUILD.gn
+++ b/components/feedback/BUILD.gn
@@ -38,9 +38,11 @@ static_library("feedback") {
     "//components/feedback/proto",
     "//components/keyed_service/content",
     "//components/keyed_service/core",
+    "//components/signin/core/browser:browser",
     "//components/variations/net",
     "//content/public/browser",
     "//content/public/common",
+    "//google_apis:google_apis",
     "//net",
     "//third_party/re2",
     "//third_party/zlib/google:zip",
