--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -665,6 +665,8 @@ split_static_library("browser") {
     "metrics/jumplist_metrics_win.h",
     "metrics/metrics_memory_details.cc",
     "metrics/metrics_memory_details.h",
+    "metrics/metrics_mojo_service.cc",
+    "metrics/metrics_mojo_service.h",
     "metrics/metrics_reporting_state.cc",
     "metrics/metrics_reporting_state.h",
     "metrics/network_quality_estimator_provider_impl.cc",
