Moved safe_browsing protos to safe_browsing/proto
To make importing one proto to the other easier, moved the safe browsing protos
"cds.proto" and "webui.proto" to components/safe_browsing/proto/

Bug:734667
Change-Id: I537b39537375f9b4d7ca00cc32aa68990673b946

--- a/components/safe_browsing/BUILD.gn
+++ b/components/safe_browsing/BUILD.gn
@@ -6,7 +6,7 @@ import("//third_party/protobuf/proto_library.gni")
 
 proto_library("csd_proto") {
   sources = [
-    "csd.proto",
+    "proto/csd.proto",
   ]
 }
 
