Add PDFExtensionClipboardTests to test copying from PDF forms.
These browser tests ensure the interactions between the PDF Viewer and
the clipboard work correctly when the PDF Viewer has a PDF that contains
form fields loaded. The test PDF comes from PDFium.

The tests use content::BrowserTestClipboardScope so they can run in
parallel without contention for the real system clipboard.

Along the way, add new browser test utility functions to simulate more
advanced key presses that cannot be simulated with SimulateKeyPress().

BUG=59266

Change-Id: I902d5040cf91d0e836242453b7f39d3adb8f8244

--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -54,6 +54,7 @@ static_library("test_support") {
     "../public/test/browser_test_base.h",
     "../public/test/browser_test_utils.cc",
     "../public/test/browser_test_utils.h",
+    "../public/test/browser_test_utils_mac.mm",
     "../public/test/browsing_data_remover_test_util.cc",
     "../public/test/browsing_data_remover_test_util.h",
     "../public/test/cache_test_util.cc",
