Create unit_tests target in //media/device_monitors.
Create new target 'unit_tests' in //media/device_monitors and moved
respective device_monitors changes from //media:unit_tests to
//media/device_monitors:unit_tests.

Bug: 613033

Signed-off-by: Suchit Agrawal <a.suchit@samsung.com>
Change-Id: I2385fa4f32080a2e120bf5558384432cf5de667e

--- a/media/device_monitors/BUILD.gn
+++ b/media/device_monitors/BUILD.gn
@@ -26,3 +26,18 @@ source_set("device_monitors") {
     ]
   }
 }
+
+source_set("unit_tests") {
+  testonly = true
+  sources = [
+    "system_message_window_win_unittest.cc",
+  ]
+
+  deps = [
+    "//base",
+    "//base/test:test_support",
+    "//media",
+    "//testing/gmock",
+    "//testing/gtest",
+  ]
+}
