DOM Distiller Web Agent runs and invokes mojo call to browser.
* Web Agents api in WebKit/webagents
* agent implemented in components/dom_distiller/
* agent.cc takes WebLocalFrame in ctor and casts to
  WebLocalFrameImpl so it can access LocalFrame.

Bug:
Change-Id: I0fdfd0b16b0bbf806a03e034f6c33f41bd48c3af

--- a/components/dom_distiller/content/renderer/BUILD.gn
+++ b/components/dom_distiller/content/renderer/BUILD.gn
@@ -6,6 +6,8 @@ static_library("renderer") {
   sources = [
     "distillability_agent.cc",
     "distillability_agent.h",
+    "distillability_webagent.cc",
+    "distillability_webagent.h",
     "distiller_js_render_frame_observer.cc",
     "distiller_js_render_frame_observer.h",
     "distiller_native_javascript.cc",
@@ -28,6 +30,7 @@ static_library("renderer") {
     "//services/service_manager/public/cpp",
     "//skia",
     "//third_party/WebKit/public:blink_headers",
+    "//third_party/WebKit/webagents",
     "//v8",
   ]
 }
