[headless/devtools] Add BeginFrameControl via DevTools.
This adds a new headless domain to devtools with commands related to
issuing BeginFrames and capturing screenshots from BeginFrame results.
Also adds view size params to Emulation.setDeviceMetricsOverride, which
are used to set up screenshots from BeginFrames.

The general idea is to issue a BeginFrame from DevTools for a particular
WebContents and be notified once it is complete. Optionally, the
resulting frame can be copied and returned as screenshot.

However, screenshots are only possible once the the main frame's render
widget has a valid surface layer. For now, we're dealing with that by
sending BeginFrames until the renderer has submitted its first
CompositorFrame.

DO NOT SUBMIT: Separate out any necessary cc/viz changes first.

Bug: 646774
Change-Id: I3b6ff1704fc8f39ed3b5ed6e5198ac44f7794bf3

--- a/headless/BUILD.gn
+++ b/headless/BUILD.gn
@@ -147,6 +147,7 @@ devtools_domains = [
   "dom_snapshot",
   "dom_storage",
   "emulation",
+  "headless",
   "heap_profiler",
   "indexeddb",
   "input",
