--- a/services/viz/public/interfaces/compositing/BUILD.gn
+++ b/services/viz/public/interfaces/compositing/BUILD.gn
@@ -11,6 +11,7 @@ mojom("compositing") {
     "compositor_frame_sink.mojom",
     "resource_settings.mojom",
     "returned_resource.mojom",
+    "shared_bitmap_allocation_notifier.mojom",
     "surface_info.mojom",
     "surface_sequence.mojom",
   ]
