[Payment Request] Makes the link between Payment Request and Third Party Native Apps
This CL creates an IOSPaymentInstrumentLauncher object that launches a third
party iOS payment app and receives the response back from this payment app.
Communication is done via Universal Link where data is passed using the link's
query parameters.

Bug:748556
Change-Id: Ie4ca21d1f67846174d0f2222ab29390298fff0da

--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -2352,6 +2352,7 @@ test("browser_tests") {
         "//services/preferences/public/interfaces",
         "//services/service_manager/public/cpp",
         "//ui/login:resources",
+        "//url",
       ]
 
       if (use_dbus) {
@@ -2936,6 +2937,7 @@ group("telemetry_perf_unittests") {
     "//testing/scripts/common.py",
     "//testing/xvfb.py",
     "//testing/scripts/run_telemetry_as_googletest.py",
+
     # For smoke testing run_telemetry_benchmark_as_googletest
     "//testing/scripts/run_telemetry_benchmark_as_googletest.py",
   ]
