[Zucchini] Add utility functions for Generate.
This CL adds utility function for manipulating labels, used when
generating a patch:
- MakeNewLabelsFromEquivalenceMap()
- FindExtraLabels()

Bug: 729154
Change-Id: If87e750eb16d538d6131da07d9a35ffb09b6cc03

--- a/chrome/installer/zucchini/BUILD.gn
+++ b/chrome/installer/zucchini/BUILD.gn
@@ -45,6 +45,7 @@ static_library("zucchini_lib") {
     "zucchini.h",
     "zucchini_apply.cc",
     "zucchini_gen.cc",
+    "zucchini_gen.h",
   ]
 
   deps = [
@@ -99,6 +100,7 @@ test("zucchini_unittests") {
     "test_reference_reader.cc",
     "test_reference_reader.h",
     "typed_value_unittest.cc",
+    "zucchini_gen_unittest.cc",
   ]
 
   deps = [
