--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -2938,6 +2938,7 @@ group("telemetry_perf_unittests") {
     "//testing/scripts/common.py",
     "//testing/xvfb.py",
     "//testing/scripts/run_telemetry_as_googletest.py",
+
     # For smoke testing run_telemetry_benchmark_as_googletest
     "//testing/scripts/run_telemetry_benchmark_as_googletest.py",
   ]
@@ -3876,6 +3877,7 @@ test("unit_tests") {
 
   if ((is_linux && !is_chromeos) || is_win) {
     sources += [
+      "../browser/feature_engagement/bookmark/bookmark_tracker_unittest.cc",
       "../browser/feature_engagement/feature_tracker_unittest.cc",
       "../browser/feature_engagement/new_tab/new_tab_tracker_unittest.cc",
       "../browser/feature_engagement/session_duration_updater_unittest.cc",
