--- a/components/download/BUILD.gn
+++ b/components/download/BUILD.gn
@@ -2,6 +2,11 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+if (is_android) {
+  import("//build/config/android/config.gni")
+  import("//build/config/android/rules.gni")
+}
+
 group("unit_tests") {
   testonly = true
 
@@ -27,4 +32,13 @@ source_set("components_unittests_gtest_filter") {
   data = [
     "components_unittests.filter",
   ]
+}
+
+if (is_android) {
+  java_group("download_java") {
+    deps = [
+      "//components/download/internal:internal_java",
+      "//components/download/public:public_java",
+    ]
+  }
 }
