Client side change to include start url
Add field "includeStartUrl" in WebAPK AndroidManifest.xml with default to false.
If set to true, append the start url as a paramater in the rewrite url.

Bug:755333
Change-Id: Iab92b065a015a5a855f0c11545c0d8f5b07eb892

--- a/chrome/android/webapk/shell_apk/AndroidManifest.xml
+++ b/chrome/android/webapk/shell_apk/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <meta-data android:name="org.chromium.webapk.shell_apk.runtimeHostApplicationName" android:value="{{{runtime_host_application_name}}}" />
         {{/bound_webapk}}
         <meta-data android:name="org.chromium.webapk.shell_apk.startUrl" android:value="{{{start_url}}}" />
+        <meta-data android:name="org.chromium.webapk.shell_apk.includeStartUrl" android:value="{{{include_start_url}}}" />
         <meta-data android:name="org.chromium.webapk.shell_apk.scope" android:value="{{{scope_url}}}" />
         <meta-data android:name="org.chromium.webapk.shell_apk.displayMode" android:value="{{{display_mode}}}" />
         <meta-data android:name="org.chromium.webapk.shell_apk.orientation" android:value="{{{orientation}}}" />
