--- a/chrome/android/webapk/shell_apk/bound_manifest_config.json
+++ b/chrome/android/webapk/shell_apk/bound_manifest_config.json
@@ -7,6 +7,7 @@
     "scope_url_path": "/"
   },
   "start_url": "https://pwa.rocks/",
+  "include_start_url": "false",
   "display_mode": "standalone",
   "orientation": "portrait",
   "theme_color": "2147483648L",
