Fix privileged servize/viz paths.
The README file for servizes/viz paths is not consistent with where
privileged things should go. It uses the following contradictory
locations:

services/viz/{gl, compositing, hit_test}/privileged/interfaces
services/viz/privileged/interfaces/{gl, compositing, hit_test}

Offline discussion with servizes/viz/OWNERS concluded we should use the
second one. This CL fixes the README to be consistent and fixes paths
appropriately.

Bug: 722935
Change-Id: I6c63f4d4f1f3c464a456d607419f307912fec593

--- a/services/viz/privileged/interfaces/compositing/BUILD.gn
+++ b/services/viz/privileged/interfaces/compositing/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//mojo/public/tools/bindings/mojom.gni")
 
-mojom("interfaces") {
+mojom("compositing") {
   sources = [
     "frame_sink_manager.mojom",
     "renderer_settings.mojom",
@@ -17,24 +17,5 @@ mojom("interfaces") {
     "//services/viz/public/interfaces/compositing",
     "//ui/gfx/geometry/mojo",
     "//ui/gfx/mojo",
-  ]
-}
-
-source_set("tests") {
-  testonly = true
-
-  sources = [
-    "struct_traits_unittest.cc",
-  ]
-
-  deps = [
-    ":interfaces",
-    "//base/test:test_support",
-    "//components/viz/common:common",
-    "//media/capture/mojo:capture_types",
-    "//services/service_manager/public/cpp",
-    "//services/service_manager/public/cpp:service_test_support",
-    "//testing/gtest",
-    "//ui/gfx:test_support",
   ]
 }
