Implement Material Design for the download shelf on Mac.
Disabled by default, enable with `--enable-features=MacMDDownloadShelf`.

- New design!
- No more nibs!
- Animated progress indicators!
- RTL support!
- VoiceOver support!
- Full keyboard access!
- New RTL helper methods on NSView!

As a result of some of the above, there's some duplication of existing
logic. This should be cleaned up once MD downloads is perma-on.

Bug: 589943, 517992
Change-Id: I8adee86c85695724679333885cc3fb6552d59137

--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -2514,6 +2514,8 @@ split_static_library("ui") {
       "cocoa/handoff_active_url_observer_bridge.h",
       "cocoa/handoff_active_url_observer_bridge.mm",
       "cocoa/handoff_active_url_observer_delegate.h",
+      "cocoa/harmony_button.h",
+      "cocoa/harmony_button.mm",
       "cocoa/history_menu_bridge.h",
       "cocoa/history_menu_bridge.mm",
       "cocoa/history_menu_cocoa_controller.h",
@@ -2528,6 +2530,8 @@ split_static_library("ui") {
       "cocoa/l10n_util.mm",
       "cocoa/last_active_browser_cocoa.cc",
       "cocoa/last_active_browser_cocoa.h",
+      "cocoa/md_hover_button.h",
+      "cocoa/md_hover_button.mm",
       "cocoa/media_picker/desktop_media_picker_bridge.h",
       "cocoa/media_picker/desktop_media_picker_bridge.mm",
       "cocoa/media_picker/desktop_media_picker_cocoa.h",
@@ -2542,6 +2546,8 @@ split_static_library("ui") {
       "cocoa/notifications/message_center_tray_bridge.mm",
       "cocoa/nsmenuitem_additions.h",
       "cocoa/nsmenuitem_additions.mm",
+      "cocoa/nsview_additions.h",
+      "cocoa/nsview_additions.mm",
       "cocoa/profiles/profile_menu_controller.h",
       "cocoa/profiles/profile_menu_controller.mm",
       "cocoa/renderer_context_menu/render_view_context_menu_mac.h",
@@ -2785,6 +2791,7 @@ split_static_library("ui") {
         "cocoa/download/download_item_controller.mm",
         "cocoa/download/download_item_mac.h",
         "cocoa/download/download_item_mac.mm",
+        "cocoa/download/download_item_view_protocol.h",
         "cocoa/download/download_shelf_context_menu_controller.h",
         "cocoa/download/download_shelf_context_menu_controller.mm",
         "cocoa/download/download_shelf_controller.h",
@@ -2798,6 +2805,10 @@ split_static_library("ui") {
         "cocoa/download/download_show_all_cell.h",
         "cocoa/download/download_show_all_cell.mm",
         "cocoa/download/download_started_animation_mac.mm",
+        "cocoa/download/md_download_item_progress_indicator.h",
+        "cocoa/download/md_download_item_progress_indicator.mm",
+        "cocoa/download/md_download_item_view.h",
+        "cocoa/download/md_download_item_view.mm",
         "cocoa/drag_util.h",
         "cocoa/drag_util.mm",
         "cocoa/draggable_button.h",
