--- a/content/common/BUILD.gn
+++ b/content/common/BUILD.gn
@@ -362,6 +362,7 @@ source_set("common") {
   public_deps = [
     ":mojo_bindings",
     "//cc",
+    "//content/public/common",
     "//gpu/command_buffer/common",
     "//ipc",
     "//third_party/WebKit/public:blink_headers",
