Fix missing GN dependencies for out-of-process heap-profiling.
Bug:751321
Change-Id: Ib222edc8e57b43079422407949f9feb4745aafa1

--- a/chrome/common/profiling/BUILD.gn
+++ b/chrome/common/profiling/BUILD.gn
@@ -27,7 +27,10 @@ if (enable_oop_heap_profiling) {
       ":interfaces",
       "//base",
       "//base:debugging_flags",
+      "//base/allocator:features",
       "//chrome/common:constants",
+      "//content/public/common",
+      "//mojo/edk/system",
     ]
   }
 
