Mojo ipc in ozone/drm for host/gpu communication.
Ozone/DRM is split between the VIZ process and its host (typically the
browser or services/ui process.) Provide complete mojo IPC connection
between the host and viz processes.

As part of this CL, the one-process mode for ozone/drm was converted
to use mojo in-process communication and hence always requires a valid
mojo connection ptr so also update the the GL unit test harness to provide
a test-style in-process mojo connection to ozone/drm.

BUG=620927

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I32d691d0c02868561d1dbe838c8f6bb23493dae6

--- a/ui/gl/BUILD.gn
+++ b/ui/gl/BUILD.gn
@@ -374,7 +374,12 @@ source_set("run_all_unittests") {
   ]
 
   if (use_ozone) {
-    deps += [ "//ui/ozone" ]
+    deps += [
+      "//mojo/edk/system",
+      "//services/service_manager/public/cpp/test:test_support",
+      "//services/service_manager/tests/service_manager",
+      "//ui/ozone",
+    ]
   }
 }
 
