Return accelerator id from ash::AcceleratorController
This change overrides ash::AcceleratorController::GetAcceleratorId(). It returns
browser command ids if applicable, otherwise kUnknownAcceleratorId.

Bug: chromium:737307
Change-Id: I288b7fc5c3381e097ed11114326e95eec17629a4

--- a/ash/public/cpp/BUILD.gn
+++ b/ash/public/cpp/BUILD.gn
@@ -5,6 +5,7 @@
 # C++ headers and sources that can be used outside ash.
 component("ash_public_cpp") {
   sources = [
+    "accelerator_ids.h",
     "app_types.h",
     "ash_pref_names.cc",
     "ash_pref_names.h",
