--- a/content/public/browser/BUILD.gn
+++ b/content/public/browser/BUILD.gn
@@ -80,6 +80,7 @@ source_set("browser_sources") {
     "cdm_registry.h",
     "certificate_request_result_type.h",
     "child_process_data.h",
+    "child_process_importance.h",
     "child_process_security_policy.h",
     "client_certificate_delegate.h",
     "color_chooser.h",
