Send a DisconnectTetheringRequest in TetherNetworkDisconnectionHandler.
Previously, a DisconnectTetheringRequest was only being sent to the
Tether host when the network was explicitly disconnected (via the
"Disconnect" button in network settings). Now it is also sent when
a connection to the active host is lost (such as connecting to an
actual Wifi network).

Bug:752340, 672263
Change-Id: Ic1d8a5dff5295889e2e57c3fcbbc3362489da5d7

--- a/chromeos/components/tether/BUILD.gn
+++ b/chromeos/components/tether/BUILD.gn
@@ -30,6 +30,8 @@ static_library("tether") {
     "device_status_util.h",
     "disconnect_tethering_operation.cc",
     "disconnect_tethering_operation.h",
+    "disconnect_tethering_operation_delegate.cc",
+    "disconnect_tethering_operation_delegate.h",
     "host_connection_metrics_logger.cc",
     "host_connection_metrics_logger.h",
     "host_scan_cache.cc",
