--- a/ios/clean/chrome/browser/ui/dialogs/BUILD.gn
+++ b/ios/clean/chrome/browser/ui/dialogs/BUILD.gn
@@ -2,6 +2,12 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+source_set("dialogs") {
+  public_deps = [
+    "//ios/clean/chrome/browser/ui/dialogs/java_script_dialogs",
+  ]
+}
+
 source_set("dialog_coordinator_support") {
   sources = [
     "dialog_coordinator+subclassing.h",
