--- a/components/ntp_tiles/BUILD.gn
+++ b/components/ntp_tiles/BUILD.gn
@@ -31,6 +31,7 @@ static_library("ntp_tiles") {
     "section_type.h",
     "switches.cc",
     "switches.h",
+    "tile_name_source.h",
     "tile_source.h",
     "tile_visual_type.h",
     "webui/ntp_tiles_internals_message_handler.cc",
@@ -113,6 +114,7 @@ if (is_android) {
   java_cpp_enum("ntp_tiles_enums_java") {
     sources = [
       "section_type.h",
+      "tile_name_source.h",
       "tile_source.h",
       "tile_visual_type.h",
     ]
