Move OutputSurface and Overlay code from cc to viz/services/display.
The OutputSurface is the API for dependency injection into the viz
service display compositor, and the overlay code is used by the
display compositor implementation. So these belong in the viz component
instead of cc.

The OverlayCandidate was left in cc/output/ for now because the
DisplayResourceProvider uses it which is in cc still, so we have to
move that first.

TBR=jam

Bug: 722935
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I92ab5421687ef0c3d2f3feb8f5672d813af712e9

--- a/components/viz/service/BUILD.gn
+++ b/components/viz/service/BUILD.gn
@@ -15,8 +15,12 @@ viz_component("service") {
     "display/bsp_tree.h",
     "display/bsp_walk_action.cc",
     "display/bsp_walk_action.h",
+    "display/ca_layer_overlay.cc",
+    "display/ca_layer_overlay.h",
     "display/color_lut_cache.cc",
     "display/color_lut_cache.h",
+    "display/dc_layer_overlay.cc",
+    "display/dc_layer_overlay.h",
     "display/direct_renderer.cc",
     "display/direct_renderer.h",
     "display/display.cc",
@@ -36,6 +40,20 @@ viz_component("service") {
     "display/gl_renderer_draw_cache.h",
     "display/layer_quad.cc",
     "display/layer_quad.h",
+    "display/output_surface.cc",
+    "display/output_surface.h",
+    "display/output_surface_client.h",
+    "display/overlay_candidate_validator.h",
+    "display/overlay_processor.cc",
+    "display/overlay_processor.h",
+    "display/overlay_strategy_fullscreen.cc",
+    "display/overlay_strategy_fullscreen.h",
+    "display/overlay_strategy_single_on_top.cc",
+    "display/overlay_strategy_single_on_top.h",
+    "display/overlay_strategy_underlay.cc",
+    "display/overlay_strategy_underlay.h",
+    "display/overlay_strategy_underlay_cast.cc",
+    "display/overlay_strategy_underlay_cast.h",
     "display/program_binding.cc",
     "display/program_binding.h",
     "display/shader.cc",
@@ -197,6 +215,7 @@ viz_source_set("unit_tests") {
     "display/draw_polygon_unittest.cc",
     "display/gl_renderer_unittest.cc",
     "display/layer_quad_unittest.cc",
+    "display/overlay_unittest.cc",
     "display/shader_unittest.cc",
     "display/software_renderer_unittest.cc",
     "display/surface_aggregator_pixeltest.cc",
