Add component installer for DownloadableStrings experiment. DO NOT SUBMIT
TODO(digit): Actually create a CRX signing key and create an Omaha
             product with it, then populate the missing constants
             in downloadable_strings_component_installer.cc

R=sorin@chromium.org,waffles@chromium.org
BUG=766746

Change-Id: Idb0a132bf595864d0ea8d26fe9ad1cca3a9f5b63

--- a/chrome/common/features.gni
+++ b/chrome/common/features.gni
@@ -77,6 +77,10 @@ declare_args() {
   # speed benefits at runtime (so we skip in debug builds). TODO(dbeam): rename
   # this flag "optimize_web_uis" because we run more than vulcanize these days.
   use_vulcanize = !is_debug
+
+  # Enable donwloadable language PAK files to reduce the size of the main
+  # Chrome APK. TODO(digit): Restrict this to official builds.
+  enable_downloadable_strings = is_android
 }
 
 # Use brlapi from brltty for braille display support.
