--- a/chrome/common/BUILD.gn
+++ b/chrome/common/BUILD.gn
@@ -48,6 +48,9 @@ buildflag_header("features") {
     "PGO_BUILD=$pgo_build",
     "USE_VULCANIZE=$use_vulcanize",
   ]
+  if (is_android) {
+    flags += [ "ENABLE_DOWNLOADABLE_STRINGS=$enable_downloadable_strings" ]
+  }
 }
 
 source_set("channel_info") {
