--- a/components/exo/wayland/BUILD.gn
+++ b/components/exo/wayland/BUILD.gn
@@ -6,6 +6,7 @@ import("//build/config/linux/pkg_config.gni")
 import("//build/config/ui.gni")
 import("//ui/base/ui_features.gni")
 import("//ui/ozone/ozone.gni")
+import("//testing/test.gni")
 
 if (use_xkbcommon) {
   pkg_config("xkbcommon") {
@@ -26,8 +27,8 @@ config("aura_shell_protocol_config") {
 source_set("aura_shell_protocol") {
   sources = [
     "aura-shell-client-protocol.h",
-    "aura-shell-server-protocol.h",
     "aura-shell-protocol.c",
+    "aura-shell-server-protocol.h",
   ]
 
   deps = [
@@ -121,16 +122,21 @@ source_set("client_lib") {
     "clients/client_helper.cc",
     "clients/client_helper.h",
   ]
+
   deps = [
     ":aura_shell_protocol",
     "//base",
+    "//ui/gl",
+    "//ui/gl/init",
+  ]
+
+  public_deps = [
     "//skia",
     "//third_party/wayland:wayland_client",
     "//third_party/wayland-protocols:linux_dmabuf_protocol",
     "//third_party/wayland-protocols:presentation_time_protocol",
-    "//ui/gl",
-    "//ui/gl/init",
   ]
+
   if (ozone_platform_gbm) {
     configs += [
       ":libdrm",
@@ -171,15 +177,15 @@ executable("wayland_rects_client") {
   }
 }
 
-executable("wayland_simple_client") {
+source_set("simple") {
   sources = [
     "clients/simple.cc",
+    "clients/simple.h",
   ]
 
   deps = [
     ":client_lib",
     "//base",
-    "//build/config:exe_and_shlib_deps",
     "//skia",
     "//third_party/wayland:wayland_client",
     "//third_party/wayland-protocols:linux_dmabuf_protocol",
@@ -196,6 +202,18 @@ executable("wayland_simple_client") {
     defines = [ "OZONE_PLATFORM_GBM" ]
     deps += [ "//third_party/minigbm" ]
   }
+}
+
+executable("wayland_simple_client") {
+  sources = [
+    "clients/simple_main.cc",
+  ]
+  deps = [
+    ":client_lib",
+    ":simple",
+    "//base",
+    "//build/config:exe_and_shlib_deps",
+  ]
 }
 
 executable("wayland_subsurface_client") {
@@ -222,6 +240,56 @@ executable("wayland_subsurface_client") {
     ]
     defines = [ "OZONE_PLATFORM_GBM" ]
     deps += [ "//third_party/minigbm" ]
+  }
+}
+
+test("wayland_client_perftests") {
+  sources = [
+    "../../../ash/test/ash_test_suite.cc",
+    "../../../ash/test/ash_test_suite.h",
+    "clients/perftests.cc",
+    "clients/test/run_all_client_perftests.cc",
+    "clients/test/wayland_client_test.cc",
+    "clients/test/wayland_client_test.h",
+  ]
+
+  deps = [
+    ":client_lib",
+    ":simple",
+    ":wayland",
+    "//ash:test_support_without_content",
+    "//ash/public/cpp:ash_public_cpp",
+    "//base",
+    "//base/test:test_support",
+    "//cc:test_support",
+    "//components/exo",
+    "//components/viz/test:test_support",
+    "//mojo/edk/embedder:headers",
+    "//testing/perf",
+    "//ui/aura",
+    "//ui/base",
+    "//ui/compositor:test_support",
+    "//ui/events:gesture_detection",
+    "//ui/gl:test_support",
+    "//ui/wm",
+  ]
+
+  data_deps = [
+    "//ash/strings:ash_test_strings",
+    "//ash/resources:ash_test_resources_100_percent",
+    "//ash/resources:ash_test_resources_200_percent",
+  ]
+
+  if (ozone_platform_gbm) {
+    configs += [
+      "//components/exo/wayland:libdrm",
+      "//ui/gl:gl_config",
+    ]
+    defines = [ "OZONE_PLATFORM_GBM" ]
+    deps += [
+      "//third_party/minigbm",
+      "//ui/ozone",
+    ]
   }
 }
 
