[vr] Add UiElement iterators
With this CL you can now iterate across elements both forward and
backward (for rendering and hit testing, respectively).

Bug:None
Change-Id: Iadc1f43353ac5ed8cef550103bac223129802035

--- a/chrome/browser/vr/BUILD.gn
+++ b/chrome/browser/vr/BUILD.gn
@@ -73,6 +73,7 @@ static_library("vr_common") {
     "elements/transience_manager.h",
     "elements/ui_element.cc",
     "elements/ui_element.h",
+    "elements/ui_element_iterator.h",
     "elements/ui_element_name.h",
     "elements/ui_element_transform_operations.cc",
     "elements/ui_element_transform_operations.h",
@@ -154,6 +155,7 @@ test("vr_common_unittests") {
     "elements/exit_prompt_unittest.cc",
     "elements/linear_layout_unittest.cc",
     "elements/transience_manager_unittest.cc",
+    "elements/ui_element_iterator_unittest.cc",
     "elements/ui_element_unittest.cc",
     "elements/url_bar_texture_unittest.cc",
     "elements/viewport_aware_root_unittest.cc",
