Add IPH Incognito Window Feature Tracker.
Changes in this patch:
-Created a IncognitoWindowTracker class, which contains methods to
notify the IPH server when events happen and if the help UI should be
triggered.
-Created a IncognitoWindowTrackerFactory class and registered in the
chrome browser main parts.
-Added unit tests for IncognitoWindowTracker event logging and expected
functionality.
-Take out event_on_history_deleted as we don't actually need to record
this.

Bug:734248
Change-Id: Ib25154c50f952b9349884eb48eb58ef1d757a9bb

--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -3902,6 +3902,7 @@ test("unit_tests") {
     sources += [
       "../browser/feature_engagement/bookmark/bookmark_tracker_unittest.cc",
       "../browser/feature_engagement/feature_tracker_unittest.cc",
+      "../browser/feature_engagement/incognito_window/incognito_window_tracker_unittest.cc",
       "../browser/feature_engagement/new_tab/new_tab_tracker_unittest.cc",
       "../browser/feature_engagement/session_duration_updater_unittest.cc",
     ]
