--- a/content/common/BUILD.gn
+++ b/content/common/BUILD.gn
@@ -312,6 +312,8 @@ source_set("common") {
     "sandbox_linux/bpf_renderer_policy_linux.h",
     "sandbox_linux/bpf_utility_policy_linux.cc",
     "sandbox_linux/bpf_utility_policy_linux.h",
+    "sandbox_linux/bpf_widevine_policy_linux.cc",
+    "sandbox_linux/bpf_widevine_policy_linux.h",
     "sandbox_linux/sandbox_bpf_base_policy_linux.cc",
     "sandbox_linux/sandbox_bpf_base_policy_linux.h",
     "sandbox_linux/sandbox_debug_handling_linux.cc",
