--- a/cc/BUILD.gn
+++ b/cc/BUILD.gn
@@ -424,6 +424,8 @@ cc_static_library("test_support") {
     "test/fake_content_layer_client.cc",
     "test/fake_content_layer_client.h",
     "test/fake_impl_task_runner_provider.h",
+    "test/fake_layer_client.cc",
+    "test/fake_layer_client.h",
     "test/fake_layer_tree_frame_sink.cc",
     "test/fake_layer_tree_frame_sink.h",
     "test/fake_layer_tree_frame_sink_client.cc",
