[Keyboard-Lock] Add KeyEventFilter and PlatformKeyEventFilter
According to the design, X11EventSource needs to use PlatformKeyEventFilter to
decide whether the keyboard event should be forwarded to regular event route. So
PlatformKeyEventFilter needs to be placed under //ui/events/ or
//ui/events/platform to let //ui/events/platform/x11 depend on it.
Meanwhile KeyEventFilter is needed by PlatformKeyEventFilter, the later one only
forwards the requests to KeyEventFilter::OnKeyEvent() function. So
KeyEventFilter interface also needs to stay in the same folder.

Considering PlatformKeyEventFilter consumes ui::PlatformEvent,
//ui/events/platform looks like a better place for it.

PlatformKeyEventFilter will be used by native callbacks on Windows and Mac OSX,
or by X11EventSource on X11.
On Windows: https://codereview.chromium.org/2879033002/patch/630001/640047
On X11: https://codereview.chromium.org/2879033002/patch/630001/640048

Both KeyEventFilter and PlatformKeyEventFilter are used in //ui/events only, so
they do not need to be declared with EVENTS_EXPORT.

This is part of Keyboard-Lock feature. Current implementation follows the
prototype at https://codereview.chromium.org/2879033002/.

Bug: chromium:680809
Change-Id: Ibec674b69a335566916a4b8009c536a459e5def2

--- a/ui/events/BUILD.gn
+++ b/ui/events/BUILD.gn
@@ -130,6 +130,7 @@ component("events") {
     "gestures/gesture_types.h",
     "keycodes/platform_key_map_win.cc",
     "keycodes/platform_key_map_win.h",
+    "key_event_filter.h",
     "null_event_targeter.cc",
     "null_event_targeter.h",
     "scoped_target_handler.cc",
@@ -143,13 +144,13 @@ component("events") {
 
   public_deps = [
     ":events_base",
+    "//skia",
     "//ui/latency",
   ]
   deps = [
     ":dom_keycode_converter",
     ":gesture_detection",
     "//base/third_party/dynamic_annotations",
-    "//skia",
     "//ui/display",
     "//ui/gfx",
     "//ui/gfx/geometry",
