views: factor out TreeView drawing options
Currently, it's difficult for consumers of TreeView to customize its visuals.
All the painting methods are private and there's no easy way to subclass
TreeView to change their behavior. This change:

1) Adds an explicit extension point for TreeView painting, named
   TreeView::DrawingProvider,
2) Moves some of the existing painting logic into the base DrawingProvider
   implementation,
3) Adds a sample DrawingProvider to TreeViewExample

This will be required to customize TreeView behavior in the collected cookies
dialog (https://crbug.com/610428).

Bug: 610428
Change-Id: Ia1c1c41f3f54065b30ed276f7ee8c390aab3d0d6

--- a/ui/views/BUILD.gn
+++ b/ui/views/BUILD.gn
@@ -157,6 +157,7 @@ component("views") {
     "controls/throbber.h",
     "controls/tree/tree_view.h",
     "controls/tree/tree_view_controller.h",
+    "controls/tree/tree_view_drawing_provider.h",
     "debug_utils.h",
     "drag_controller.h",
     "drag_utils.h",
@@ -343,6 +344,7 @@ component("views") {
     "controls/throbber.cc",
     "controls/tree/tree_view.cc",
     "controls/tree/tree_view_controller.cc",
+    "controls/tree/tree_view_drawing_provider.cc",
     "debug_utils.cc",
     "drag_utils.cc",
     "drag_utils_mac.mm",
